added apache logger, fixed some bugs
fixed saving in ordinary tab